tests/PhiTest/compile_failure/src/StaticRequireFalse.fail.cpp
#include <Phi/Test/TestMacros.hpp>

TEST_CASE("STATIC_REQUIRE_FALSE")
{
    STATIC_REQUIRE_FALSE(true);
}
